bin status overflow issue fixed css

--- a/views/admin.css
+++ b/views/admin.css
@@ -22,6 +22,7 @@ body {
     margin-top: 50px;
     width: 100%;
     font-family: 'Lexend';
+    overflow: visible;
 }
 
 .sidebar img {
